# bolos-api

./: Cargo.toml  Dockerfile
.sqlx/: query-0dff02bddd8956a45940944d21d5d998df42dc760190163070761b8c6c2d93aa.json  query-29a1120dca3a818958105fb5b291ddf6881327a7a8bf9b93ae4a638b93737115.json  query-3ef40ffd9d55703b5d1d7a275878f97a3d90f68194e7bab1c66fe5a4b335c6bc.json  query-a4e3205a322b5b15fc0e8ae61a7d8d2925700ed13da9dddd6bdc17902403bd36.json  query-c2ebb1ad8bee319894b553f7b6e109a6a08b2aca7d0632a76649211b2767ff3f.json  query-e17cd800868d27f010b1c258a4fb2d0e7a6a86cbbeca2ad52bc5f95efffd0278.json  query-f4bce7491a3d6de7cd07b747a53a5766672ed96bc043fade9e8cca346f658595.json
migrations/: 0002_update_services.sql  001_initial_schema.sql
src/: main.rs  models.rs
src/handlers/: bookings.rs  contact.rs  mod.rs  services.rs
