[package]
name = "bolos-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web  = "4"
actix-cors = "0.7"
tokio      = { version = "1", features = ["full"] }
sqlx       = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
chrono     = { version = "0.4", features = ["serde"] }
dotenv     = "0.15"
env_logger = "0.10"
log        = "0.4"